re PR rtl-optimization/12510 (ICE in final_scan_insn)

PR optimization/12510
	Backport from mainline:

	2003-09-08  Jakub Jelinek  <jakub@redhat.com>

	* toplev.c (rest_of_compilation): Call split_all_insns before
	regstack if optimizing but not scheduling after reload.

From-SVN: r72286